turtleart.house.House.scala.error
Compilation error:
House:6: error: overloaded method value forward with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
  forward()
  ^